[package]
name = "search_graph_fuzz"
version = "0.1.0"
edition = "2021"

[profile.release]
debug-assertions = true

[dependencies]
rustc_type_ir = { default-features = false, path = "../rust/compiler/rustc_type_ir", features = ["nightly"] }
rand = { version = "0.8", features = ["small_rng"] }

tracing = "0.1"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
tracing-tree = { version = "0.2" }